# crewai-agents

./: README.md  sample.py
debating_agents/: ENVIRONMENT_SETUP.md  README.md  decide.md  oppose.md  pyproject.toml
debating_agents/output/: propose_round_1.md
debating_agents/src/debating_agents/: crew.py  main.py
debating_agents/src/debating_agents/config/: agents.yaml  tasks.yaml
financial_researcher/: pyproject.toml
financial_researcher/output/: report.md
financial_researcher/src/financial_researcher/config/: agents.yaml
