[project]
name = "debating_agents"
version = "0.1.0"
description = "debating-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai==0.175.0"
]

[project.scripts]
debating_agents = "debating_agents.main:run"
run_crew = "debating_agents.main:run"
train = "debating_agents.main:train"
replay = "debating_agents.main:replay"
test = "debating_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
